--- a/work.tex
+++ b/work.tex
@@ -46,6 +46,7 @@
  \usepackage{wrapfig}
 \usepackage{makeidx}
 \usepackage{pdfsync}
+\usepackage{epstopdf}
 \usepackage[final]{pdfpages}
 \makeindex
 %   \topsep - amount of extra vertical space at top of list
