--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -102,6 +102,16 @@ Universidade Estadual de Campinas}
 \subsection{Sonet/SDH}
 \frame{
 \frametitle{Os protocolos Sonet/SDH}
+\begin{itemize}
+		\item Limitações da tecnologia de transporte PDH.
+		\item Pesquisa iniciada pela \textit{Exchange Carriers Standards Association} (ECSA):
+		\begin{itemize}
+				\item Início da pesquisa no ano de 1984.
+				%\item Proposta para o \textit{American National Standards Institute} (ANSI).
+				\item Inicio da padronização de \textit{Synchronous Optical Networking} (SONET) no ano de 1985.
+		\end{itemize}
+		
+\end{itemize}
 	
 }
 
