Apresentação SONET/SDH

--- a/Apresentacao.tex
+++ b/Apresentacao.tex
@@ -17,7 +17,7 @@
 
 \title[Transporte 2]{Protocolos para redes óticas de transporte}
 \subtitle{
-\textit{Disciplina de Redes Óticas}}
+\textit{Disciplina de Redes Óticas - IE008}}
 %\author[Alaelson Fábio\linebreak Isaac\linebreak Lailson Thyago]{Alaelson Jatobá\linebreak
 \author[]{Alaelson Jatobá\linebreak
 Fábio Barbosa\linebreak
@@ -104,11 +104,19 @@ Universidade Estadual de Campinas}
 \frametitle{Os protocolos Sonet/SDH}
 \begin{itemize}
 		\item Limitações da tecnologia de transporte PDH.
+		\vspace{\baselineskip}
 		\item Pesquisa iniciada pela \textit{Exchange Carriers Standards Association} (ECSA):
 		\begin{itemize}
 				\item Início da pesquisa no ano de 1984.
 				%\item Proposta para o \textit{American National Standards Institute} (ANSI).
 				\item Inicio da padronização de \textit{Synchronous Optical Networking} (SONET) no ano de 1985.
+		\end{itemize}
+		\vspace{\baselineskip}
+		\item \textit{International Telecommunication Union - Telecommunication Standardization Sector} (ITU-T).
+		\begin{itemize}
+				\item Interesse no padrão SONET.
+				\item Propôs mudanças.
+				\item Definição do padrão \textit{Synchronous Digital Hierarchy} (SDH).
 		\end{itemize}
 		
 \end{itemize}
